<resources>
    <string name="app_name">Perfect Notes</string>
    <string name="copy">Copia texto</string>
    <string name="share">Compartilhar</string>
    <string name="lock">Bloquear</string>
    <string name="unlock">Desbloquear</string>
    <string name="clear">Limpar tudo</string>
    <string name="add_title">Adicionar titulo</string>
    <string name="save_as">Salvar como...</string>
    <string name="font">Fontes</string>
    <string name="print">Imprimir</string>
    <string name="narrar">Modo leitura</string>
    <string name="text_here">Digite seu texto aqui...</string>
    <string name="replace">Substituir</string>
    <string name="bold">Negrito</string>
    <string name="italic">Itálico</string>
    <string name="align_left">Aliamento esquerdo</string>
    <string name="align_center">Aliamento central</string>
    <string name="align_right">Aliamento direito</string>
    <string name="save">Salvar</string>
    <string name="dialog_salve_edit">Houve mudanças no editor, pretende salvar as novas edições?</string>
    <string name="dialog_salve_btn_save">Salvar</string>
    <string name="dialog_salve_ecluir">Descartar</string>
    <string name="dialog_save_cancel">Cancelar</string>
    <string name="new_text">Novo texto</string>
    <string name="close_exit">Fechar/Excluir</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="replace_old">Antiga</string>
    <string name="replace_new">Nova</string>
    <string name="replace_info">Substitua uma caractere ou palavra por outra.</string>
    <string name="sort_title">Ordenar por titulo</string>
    <string name="sort_data">Ordenar por tempo de modificaçãp</string>
    <string name="sort_key">Ordenar por protegido em cima</string>
    <string name="sort">Ordenar por:</string>
    <string name="lock_key">Digite uma senha!</string>
    <string name="lock_info">Crie uma senha com até 8 caracteres!</string>
    <string name="unlock_key">Digite sua senha!</string>
    <string name="unlock_info_key">Digite sua senha.  Caso tenha perdido a senha não é possível resgatar.</string>
    <string name="unlock_error">Senha incorreta, tente novamente.</string>
    <string name="dialog_main_delete">Apagar</string>
    <string name="dialog_main_select">Selecionar</string>
    <string name="text_limpo">Não possui texto no editor para esta ação!</string>
    <string name="add_title_dialog">Adicionar titulo</string>
    <string name="dialog_title_add_error">Não foi possível salvar em branco!</string>
    <string name="dialog_replace_modificado">A mudança foi efetuada!</string>
    <string name="dialog_replace_error">Não podemos modificar paravras se a \'antiga\' estiver em branco!</string>
    <string name="dialog_senha_modificado">Senha salva!</string>
    <string name="dialog_senha_un_modificado">A senha foi removida!</string>
    <string name="delete_note">Deseja apagar esta nota?</string>
    <string name="note_saved">Dados salvos!</string>
    <string name="data_jan">jan</string>
    <string name="data_fev">fev</string>
    <string name="data_mar">mar</string>
    <string name="data_abr">abr</string>
    <string name="data_mai">mai</string>
    <string name="data_jun">jun</string>
    <string name="data_jul">jul</string>
    <string name="data_ago">ago</string>
    <string name="data_set">set</string>
    <string name="data_out">out</string>
    <string name="data_nov">nov</string>
    <string name="data_dez">dez</string>
    <string name="title_hint">Digite o titulo aqui...</string>
    <string name="fonf_size">Tamanho da fonte</string>
    <string name="font_family">Fonte</string>
    <string name="isdefault">Padrão</string>
    <string name="list_caractes">"</string>
    <string name="qr_scan_title">Escanei o código QR</string>
     <string name="dialog_senha_un_blank_modificado">A senha não foi removida!</string>
    <string name="replace_error_not_container">Não existe no editor o texto:</string>
    <string name="share_qr">Via código QR</string>
    <string name="share_apps">Via apps</string>
    <string name="share_zap">Via WhatsApp</string>
    <string name="save_image">Imagem</string>
    <string name="save_text">Arquivo de texto</string>
    <string name="save_pdf">PDF</string>
    <string name="qr_error">Você ultrapassou o número máximo de caracteres para essa função!</string>
    <string name="folder_image">Imagen</string>
    <string name="folder_text">Arquivo de texto</string>
    <string name="of">de</string>
    <string name="code_scan">Mire no código QR</string>
    <string name="dialog_senha_lock_blank">Não podemos salva senha em branco!</string>
    <string name="dialog_senha_lock_space">Não é possivel iniciar com espaço.</string>
    <string name="note_update">Dados atualizados</string>
    <string name="as">as</string>
</resources>
