<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme"
            app:title="@string/sort"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="318dp" />
        <RadioGroup
     android:layout_width="match_parent"
     android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/sort_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_title" />

            <RadioButton
                android:id="@+id/sort_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_data" />

            <RadioButton
                android:id="@+id/sort_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_key" />
 </RadioGroup>
        </LinearLayout>
</android.support.constraint.ConstraintLayout>