<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme"
            app:title="@string/replace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/replace_old"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/replace_old" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_margin="3dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/replace_new"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/replace_new" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/replace_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:minWidth="200dp"
                android:text="@string/replace_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal" >

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/replace_btn_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancelar"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:theme="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/replace_btn_replace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replace"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:theme="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>