<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme"
            app:title="@string/add_title_dialog" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/title_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="50" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ldialog_title_btn_exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:theme="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dialog_add_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:theme="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title_dialog" />
    </LinearLayout>
</LinearLayout>